--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<p class="copy">Copyright 2020. JJD</p>
 		</div>
 	</div><!-- footer end -->
-	<script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<!-- slick 설정 js -->
 	<script>
 		$(function () {
