--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
 	<meta name="format-detection" content="telephone=no" />
 	<title>맘스터치메인</title>
