Mixed content 에러 해결

--- a/detail1.html
+++ b/detail1.html
@@ -1,43 +1,46 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
 	<title>detail1</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/detail.css">
 </head>
+
 <body>
 	<div id="header">
 		<div class="headerwrap">
-		 <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
-   
-		 <p class="search_btn">search</p>
-		 <p class="menu_btn">menu</p>	
-   
-		 <div class="search_wrap">
-		   <form action="#" method="get" class="search_box">
-			<fieldset>
-			 <legend class="blind">검색폼</legend>
-			 <input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
-			 <input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색"/>
-			 <button type="button" class="close">검색 닫기</button>
-			</fieldset>
-		   </form>
-		  </div><!-- search폼 -->
-   
-		  <nav class="nav">
-		   <h2 class="blind">main menu</h2>
-			<ul class="clear">
-			  <li><a href="list.html">메뉴</a></li>
-			  <li><a href="store.html">매장찾기</a></li>
-			  <li><a href="event.html">이벤트</a></li>
-			  <li><a href="story.html">스토리</a></li>
-			</ul>
-		  </nav>
+			<h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
+
+			<p class="search_btn">search</p>
+			<p class="menu_btn">menu</p>
+
+			<div class="search_wrap">
+				<form action="#" method="get" class="search_box">
+					<fieldset>
+						<legend class="blind">검색폼</legend>
+						<input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
+						<input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색" />
+						<button type="button" class="close">검색 닫기</button>
+					</fieldset>
+				</form>
+			</div><!-- search폼 -->
+
+			<nav class="nav">
+				<h2 class="blind">main menu</h2>
+				<ul class="clear">
+					<li><a href="list.html">메뉴</a></li>
+					<li><a href="store.html">매장찾기</a></li>
+					<li><a href="event.html">이벤트</a></li>
+					<li><a href="story.html">스토리</a></li>
+				</ul>
+			</nav>
 		</div><!-- headerwrap -->
-	   </div><!-- header -->
+	</div><!-- header -->
 
 	<div id="content_slide" class="clear">
 		<div class="content_slide_wrap">
@@ -51,26 +54,26 @@
 					<p class="sub">상큼한 코올슬로와 고소한 화이트치즈에 매콤한 특제 핫치킨소스를 입힌 통다리살 패티의 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">225</td>
-					<td class="td">481</td>
-					<td class="td">1일792기준(40)</td>
-					<td>931</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">225</td>
+						<td class="td">481</td>
+						<td class="td">1일792기준(40)</td>
+						<td>931</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide2">
@@ -83,26 +86,26 @@
 					<p class="sub">통다리살 치킨패티와 매콤하면서 깔끔한 뒷맛이 일품인 할라피뇨 소스가 잘 어우러진 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">250</td>
-					<td class="td">479</td>
-					<td class="td">1일870기준(44)</td>
-					<td>929</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">250</td>
+						<td class="td">479</td>
+						<td class="td">1일870기준(44)</td>
+						<td>929</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide3">
@@ -115,26 +118,26 @@
 					<p class="sub">매콤, 달콤, 새콤 살사소스로 입맛 확 살리~는 통다리살버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">220</td>
-					<td class="td">409	</td>
-					<td class="td">1일737기준(37)</td>
-					<td>859</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">220</td>
+						<td class="td">409 </td>
+						<td class="td">1일737기준(37)</td>
+						<td>859</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide4">
@@ -147,26 +150,26 @@
 					<p class="sub">통새우, 에그프라이, 부드러운 통가슴살에 매콤한 스리라차 마요 소스를 더한 환상적인 조합의 대확행버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">268</td>
-					<td class="td">678</td>
-					<td class="td">1일915기준(46)</td>
-					<td>1128</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">268</td>
+						<td class="td">678</td>
+						<td class="td">1일915기준(46)</td>
+						<td>1128</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide5">
@@ -179,26 +182,26 @@
 					<p class="sub">에그프라이, 프리미엄 더블햄, 통다리살패티에 신선한 양상추가 들어간 크고 확실한 행복을 즐길 수 있는 대확행 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">300</td>
-					<td class="td">709</td>
-					<td class="td">1일915기준(46)</td>
-					<td>1159</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">300</td>
+						<td class="td">709</td>
+						<td class="td">1일915기준(46)</td>
+						<td>1159</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide6">
@@ -208,29 +211,29 @@
 				</div>
 				<div id="content">
 					<div id="image"><img src="img/burger_list6.png" alt="burger2"></div>
-					<p class="sub">두툼한 통가슴살패티와 바삭하고 스모키한 베이컨칩,부드러운 화이트치즈소스가 어우러진 환상적인 조합의   프리미엄 버거</p>
+					<p class="sub">두툼한 통가슴살패티와 바삭하고 스모키한 베이컨칩,부드러운 화이트치즈소스가 어우러진 환상적인 조합의 프리미엄 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">250</td>
-					<td class="td">479</td>
-					<td class="td">1일915기준(44)</td>
-					<td>929</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">250</td>
+						<td class="td">479</td>
+						<td class="td">1일915기준(44)</td>
+						<td>929</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide7">
@@ -243,26 +246,26 @@
 					<p class="sub">부드러운 치즈와 한층 더 촉촉해진 닭가슴살로 딥~하게 빠져드는 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">220</td>
-					<td class="td">409</td>
-					<td class="td">1일915기준(37)</td>
-					<td>859</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">220</td>
+						<td class="td">409</td>
+						<td class="td">1일915기준(37)</td>
+						<td>859</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide8">
@@ -275,26 +278,26 @@
 					<p class="sub">불 맛이 살아있는 싸이버거의 진火, 싸이버거를 매운 버전으로 즐길 수 있는 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">225</td>
-					<td class="td">481</td>
-					<td class="td">1일915기준(40)</td>
-					<td>931</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">225</td>
+						<td class="td">481</td>
+						<td class="td">1일915기준(40)</td>
+						<td>931</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide9">
@@ -307,26 +310,26 @@
 					<p class="sub">풍미 가득한 불고기 패티 두장에 신선한 양상추와 고소한 치즈를 더한 완벽한 조합의 프리미엄 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">220</td>
-					<td class="td">482</td>
-					<td class="td">1일915기준(52)</td>
-					<td>932</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">220</td>
+						<td class="td">482</td>
+						<td class="td">1일915기준(52)</td>
+						<td>932</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide10">
@@ -339,26 +342,26 @@
 					<p class="sub">매콤한 통다리살 패티가 통째로~양파와 양상추가 조화를 이루는 맘스터치 시그니처 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">200</td>
-					<td class="td">511</td>
-					<td class="td">1일915기준(34)</td>
-					<td>961</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">200</td>
+						<td class="td">511</td>
+						<td class="td">1일915기준(34)</td>
+						<td>961</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide11">
@@ -371,26 +374,26 @@
 					<p class="sub">통새우살의 씹히는 맛과 바삭한 코코넛 가루 표면의 고소하고 바삭한 프리미엄 통새우 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">165</td>
-					<td class="td">370</td>
-					<td class="td">1일915기준(27)</td>
-					<td>820</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">165</td>
+						<td class="td">370</td>
+						<td class="td">1일915기준(27)</td>
+						<td>820</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide12">
@@ -403,26 +406,26 @@
 					<p class="sub">보기만 해도 먹음직한 치킨과 상큼한 양상추가 만들어내는 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">210</td>
-					<td class="td">389</td>
-					<td class="td">1일915기준(29)</td>
-					<td>839</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">210</td>
+						<td class="td">389</td>
+						<td class="td">1일915기준(29)</td>
+						<td>839</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 닭고기, 쇠고기</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide13">
@@ -435,26 +438,26 @@
 					<p class="sub">영양 만점의 불고기 패티에 고소한 불고기 소스를 가미하여 한층 더 맛있는 영양 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">155</td>
-					<td class="td">322</td>
-					<td class="td">1일915기준(27)</td>
-					<td>772</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">155</td>
+						<td class="td">322</td>
+						<td class="td">1일915기준(27)</td>
+						<td>772</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide14">
@@ -467,29 +470,29 @@
 					<p class="sub">영양가득 푸짐한 햄과 치킨, 상큼한 향상추가 만들어내는 영양 버거</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td>세트칼로리 (kcal)</td>
-				</tr>
-				<tr>
-					<td class="td">245</td>
-					<td class="td">515</td>
-					<td class="td">1일915기준(36)</td>
-					<td>965</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td>세트칼로리 (kcal)</td>
+					</tr>
+					<tr>
+						<td class="td">245</td>
+						<td class="td">515</td>
+						<td class="td">1일915기준(36)</td>
+						<td>965</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
-		</div>	
+		</div>
 	</div>
 	<div class="slide_btn">
 		<a href="#"><img src="img/visual_btn_L.png" class="left"></a>
@@ -542,4 +545,5 @@
 	<script src="js/common.js"></script>
 	<script src="js/detail_slide.js"></script>
 </body>
+
 </html>
