--- a/detail2.html
+++ b/detail2.html
@@ -1,43 +1,46 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
 	<title>detail2</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/detail.css">
 </head>
+
 <body>
 	<div id="header">
 		<div class="headerwrap">
-		 <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
-   
-		 <p class="search_btn">search</p>
-		 <p class="menu_btn">menu</p>	
-   
-		 <div class="search_wrap">
-		   <form action="#" method="get" class="search_box">
-			<fieldset>
-			 <legend class="blind">검색폼</legend>
-			 <input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
-			 <input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색"/>
-			 <button type="button" class="close">검색 닫기</button>
-			</fieldset>
-		   </form>
-		  </div><!-- search폼 -->
-   
-		  <nav class="nav">
-		   <h2 class="blind">main menu</h2>
-			<ul class="clear">
-			  <li><a href="list.html">메뉴</a></li>
-			  <li><a href="store.html">매장찾기</a></li>
-			  <li><a href="event.html">이벤트</a></li>
-			  <li><a href="story.html">스토리</a></li>
-			</ul>
-		  </nav>
+			<h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
+
+			<p class="search_btn">search</p>
+			<p class="menu_btn">menu</p>
+
+			<div class="search_wrap">
+				<form action="#" method="get" class="search_box">
+					<fieldset>
+						<legend class="blind">검색폼</legend>
+						<input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
+						<input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색" />
+						<button type="button" class="close">검색 닫기</button>
+					</fieldset>
+				</form>
+			</div><!-- search폼 -->
+
+			<nav class="nav">
+				<h2 class="blind">main menu</h2>
+				<ul class="clear">
+					<li><a href="list.html">메뉴</a></li>
+					<li><a href="store.html">매장찾기</a></li>
+					<li><a href="event.html">이벤트</a></li>
+					<li><a href="story.html">스토리</a></li>
+				</ul>
+			</nav>
 		</div><!-- headerwrap -->
-	   </div><!-- header -->
+	</div><!-- header -->
 
 	<div id="content_slide" class="clear">
 		<div class="content_slide_wrap">
@@ -51,30 +54,30 @@
 					<p class="sub">큼직한 통다리살에 매콤한 특제 핫치킨소스와 씨즈닝을 입힌 치킨(1조각)</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td class="td">당류(g)</td>
-					<td class="td">포화지방(g)</td>
-					<td>단백질(g)</td>
-				</tr>
-				<tr>
-					<td class="td">100</td>
-					<td class="td">330</td>
-					<td class="td">486(24)</td>
-					<td class="td">1</td>
-					<td class="td">5(34)</td>
-					<td>19(35)</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td class="td">당류(g)</td>
+						<td class="td">포화지방(g)</td>
+						<td>단백질(g)</td>
+					</tr>
+					<tr>
+						<td class="td">100</td>
+						<td class="td">330</td>
+						<td class="td">486(24)</td>
+						<td class="td">1</td>
+						<td class="td">5(34)</td>
+						<td>19(35)</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>우유, 대두, 밀, 토마토, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>우유, 대두, 밀, 토마토, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide2">
@@ -87,30 +90,30 @@
 					<p class="sub">감칠맛 가득 마늘의 풍미와 간장소스의 풍부한 맛이 어우러진 치킨</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td class="td">당류(g)</td>
-					<td class="td">포화지방(g)</td>
-					<td>단백질(g)</td>
-				</tr>
-				<tr>
-					<td class="td">100</td>
-					<td class="td">254</td>
-					<td class="td">248(12)</td>
-					<td class="td">6</td>
-					<td class="td">3(20)</td>
-					<td>16(29)</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td class="td">당류(g)</td>
+						<td class="td">포화지방(g)</td>
+						<td>단백질(g)</td>
+					</tr>
+					<tr>
+						<td class="td">100</td>
+						<td class="td">254</td>
+						<td class="td">248(12)</td>
+						<td class="td">6</td>
+						<td class="td">3(20)</td>
+						<td>16(29)</td>
+					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>알류, 우유, 대두, 밀, 돼지고기, 토마토, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide3">
@@ -141,12 +144,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>우유, 대두, 밀, 토마토, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>우유, 대두, 밀, 토마토, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide4">
@@ -177,12 +180,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>난류, 우유, 대두, 밀, 돼지고기, 토마토, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide5">
@@ -213,12 +216,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 닭고기</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 닭고기</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide6">
@@ -249,12 +252,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide7">
@@ -285,12 +288,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 아황산류, 닭고기, 쇠고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 아황산류, 닭고기, 쇠고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide8">
@@ -321,12 +324,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 닭고기, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 닭고기, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide9">
@@ -357,12 +360,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide10">
@@ -393,12 +396,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>대두, 밀, 닭고기, 쇠고기, 오징어, 조개류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide11">
@@ -627,7 +630,7 @@
 					</tr>
 				</table>
 			</div>
-		</div>	
+		</div>
 	</div>
 	<div class="slide_btn">
 		<a href="#"><img src="img/visual_btn_L.png" class="left"></a>
@@ -680,4 +683,5 @@
 	<script src="js/common.js"></script>
 	<script src="js/detail_slide.js"></script>
 </body>
+
 </html>
