--- a/detail4.html
+++ b/detail4.html
@@ -1,43 +1,46 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
 	<title>detail4</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/detail.css">
 </head>
+
 <body>
 	<div id="header">
 		<div class="headerwrap">
-		 <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
-   
-		 <p class="search_btn">search</p>
-		 <p class="menu_btn">menu</p>	
-   
-		 <div class="search_wrap">
-		   <form action="#" method="get" class="search_box">
-			<fieldset>
-			 <legend class="blind">검색폼</legend>
-			 <input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
-			 <input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색"/>
-			 <button type="button" class="close">검색 닫기</button>
-			</fieldset>
-		   </form>
-		  </div><!-- search폼 -->
-   
-		  <nav class="nav">
-		   <h2 class="blind">main menu</h2>
-			<ul class="clear">
-			  <li><a href="list.html">메뉴</a></li>
-			  <li><a href="store.html">매장찾기</a></li>
-			  <li><a href="event.html">이벤트</a></li>
-			  <li><a href="story.html">스토리</a></li>
-			</ul>
-		  </nav>
+			<h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="MOM's TOUCH"></a></h1>
+
+			<p class="search_btn">search</p>
+			<p class="menu_btn">menu</p>
+
+			<div class="search_wrap">
+				<form action="#" method="get" class="search_box">
+					<fieldset>
+						<legend class="blind">검색폼</legend>
+						<input type="search" placeholder="매장 또는 메뉴 정보를 검색하실수 있습니다." />
+						<input type="image" class="searchBtn" src="img/search_btn2.png" alt="검색" />
+						<button type="button" class="close">검색 닫기</button>
+					</fieldset>
+				</form>
+			</div><!-- search폼 -->
+
+			<nav class="nav">
+				<h2 class="blind">main menu</h2>
+				<ul class="clear">
+					<li><a href="list.html">메뉴</a></li>
+					<li><a href="store.html">매장찾기</a></li>
+					<li><a href="event.html">이벤트</a></li>
+					<li><a href="story.html">스토리</a></li>
+				</ul>
+			</nav>
 		</div><!-- headerwrap -->
-	   </div><!-- header -->
+	</div><!-- header -->
 
 	<div id="content_slide" class="clear">
 		<div class="content_slide_wrap">
@@ -51,22 +54,22 @@
 					<p class="sub">따뜻하고 달콤한 핫초코</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td class="td">당류(g)</td>
-					<td class="td">포화지방(g)</td>
-					<td>단백질(g)</td>
-				</tr>
-				<tr>
-					<td class="td">229</td>
-					<td class="td">104</td>
-					<td class="td">39(2)</td>
-					<td class="td">16</td>
-					<td class="td">2(13)</td>
-					<td>2(4)</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td class="td">당류(g)</td>
+						<td class="td">포화지방(g)</td>
+						<td>단백질(g)</td>
+					</tr>
+					<tr>
+						<td class="td">229</td>
+						<td class="td">104</td>
+						<td class="td">39(2)</td>
+						<td class="td">16</td>
+						<td class="td">2(13)</td>
+						<td>2(4)</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide2">
@@ -79,22 +82,22 @@
 					<p class="sub">블루베리, 라즈베리 등 7가지 베리의 새콤달콤한 맛을 시원하게 즐길 수 있는 무카페인 음료</p>
 				</div>
 				<table id="t1">
-				<tr class="tr">
-					<td class="td">1회 제공 (g)</td>
-					<td class="td">칼로리 (kcal)</td>
-					<td class="td">나트륨 (mg)</td>
-					<td class="td">당류(g)</td>
-					<td class="td">포화지방(g)</td>
-					<td>단백질(g)</td>
-				</tr>
-				<tr>
-					<td class="td">300</td>
-					<td class="td">76</td>
-					<td class="td">491(2)</td>
-					<td class="td">15</td>
-					<td class="td">0(0)</td>
-					<td>0(0</td>
-				</tr>
+					<tr class="tr">
+						<td class="td">1회 제공 (g)</td>
+						<td class="td">칼로리 (kcal)</td>
+						<td class="td">나트륨 (mg)</td>
+						<td class="td">당류(g)</td>
+						<td class="td">포화지방(g)</td>
+						<td>단백질(g)</td>
+					</tr>
+					<tr>
+						<td class="td">300</td>
+						<td class="td">76</td>
+						<td class="td">491(2)</td>
+						<td class="td">15</td>
+						<td class="td">0(0)</td>
+						<td>0(0</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide3">
@@ -181,12 +184,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>복숭아, 아황산류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>복숭아, 아황산류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide6">
@@ -217,12 +220,12 @@
 					</tr>
 				</table>
 				<table id="t2">
-				<tr class="tr">
-					<td>알레르기 유발 성분 함유 정보</td>
-				</tr>
-				<tr>
-					<td>아황산류</td>
-				</tr>
+					<tr class="tr">
+						<td>알레르기 유발 성분 함유 정보</td>
+					</tr>
+					<tr>
+						<td>아황산류</td>
+					</tr>
 				</table>
 			</div>
 			<div class="slider slide7">
@@ -281,7 +284,7 @@
 					</tr>
 				</table>
 			</div>
-		</div>	
+		</div>
 	</div>
 	<div class="slide_btn">
 		<a href="#"><img src="img/visual_btn_L.png" class="left"></a>
@@ -334,4 +337,5 @@
 	<script src="js/common.js"></script>
 	<script src="js/detail_slide.js"></script>
 </body>
+
 </html>
